--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@fontsource/readex-pro": "^5.0.8",
+    "@gsap/react": "^2.1.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.9.0",
+    "gsap": "^3.12.5",
     "mini-svg-data-uri": "^1.4.4",
+    "moment": "^2.30.1",
     "postcss": "^8.4.45",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
