--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^11.9.0",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.447.0",
     "mini-svg-data-uri": "^1.4.4",
     "moment": "^2.30.1",
     "postcss": "^8.4.45",
