--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.26.2",
+    "react-scroll-trigger": "^0.6.14",
     "swiper": "^10.2.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10"
